팔로우 등록, 조회 구현